# transformed-roofing

./: .gitignore  CLAUDE.md
backend/: .env  .env.example  db.sqlite3  pyproject.toml
backend/config/: settings.py  urls.py
backend/gallery/: admin.py  models.py  serializers.py  urls.py  views.py
backend/gallery/migrations/: 0001_initial.py
backend/leads/: admin.py  emails.py  models.py  serializers.py  urls.py  views.py
backend/leads/migrations/: 0001_initial.py  0002_notificationemail.py  0003_seed_notification_email.py
backend/reviews/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/reviews/fixtures/: initial_reviews.json
backend/reviews/migrations/: 0001_initial.py  0002_review_service_area.py  0003_assign_review_service_areas.py
backend/service_areas/: admin.py  models.py  serializers.py  urls.py  views.py
backend/service_areas/migrations/: 0001_initial.py  0002_seed_initial_areas.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
frontend/src/app/about/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/gallery/: page.tsx
frontend/src/app/service-areas/: page.tsx
frontend/src/app/services/: page.tsx
frontend/src/components/forms/: ContactForm.tsx  FormField.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  NavLink.tsx  (+1 more)
frontend/src/context/: ServiceAreaContext.tsx
frontend/src/lib/: constants.ts  contact-schema.ts  metadata.ts  reviews.ts  structured-data.ts
frontend/src/types/: index.ts
(+23 files in other folders)
